Update de organização de pastas e arquivos
Arquivos Renomeados
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ClientesDAO.java -> src/main/java/sistema/os/sistemaos/dao/Clientes/ClientesDAO.java
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ClientesDAOImpl.java -> src/main/java/sistema/os/sistemaos/dao/Clientes/ClientesDAOImpl.java
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ProdutosDAO.java -> src/main/java/sistema/os/sistemaos/dao/Produtos/ProdutosDAO.java
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ProdutosDAOImpl.java -> src/main/java/sistema/os/sistemaos/dao/Produtos/ProdutosDAOImpl.java
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ServicosDAO.java -> src/main/java/sistema/os/sistemaos/dao/Servicos/ServicosDAO.java
	renomeado:    src/main/java/sistema/os/sistemaos/dao/ServicosDAOImpl.java -> src/main/java/sistema/os/sistemaos/dao/Servicos/ServicosDAOImpl.java
	renomeado:    src/main/java/sistema/os/sistemaos/service/ClientesService.java -> src/main/java/sistema/os/sistemaos/service/Clientes/ClientesService.java
	renomeado:    src/main/java/sistema/os/sistemaos/service/ClientesServiceImpl.java -> src/main/java/sistema/os/sistemaos/service/Clientes/ClientesServiceImpl.java
	renomeado:    src/main/java/sistema/os/sistemaos/service/ProdutosService.java -> src/main/java/sistema/os/sistemaos/service/Produtos/ProdutosService.java
	renomeado:    src/main/java/sistema/os/sistemaos/service/ProdutosServiceImpl.java -> src/main/java/sistema/os/sistemaos/service/Produtos/ProdutosServiceImpl.java
	renomeado:    src/main/java/sistema/os/sistemaos/service/ServicosService.java -> src/main/java/sistema/os/sistemaos/service/Servicos/ServicosService.java
	renomeado:    src/main/resources/static/js/cadastro.js -> src/main/resources/static/js/cadastro_cliente.js
    renomeado:    src/main/java/sistema/os/sistemaos/service/ServicosServiceImpl.java -> src/main/java/sistema/os/sistemaos/service/Servicos/ServicosServiceImpl.java

Arquivos Modi

--- a/src/main/resources/templates/componentes/layout.html
+++ b/src/main/resources/templates/componentes/layout.html
@@ -56,12 +56,8 @@
 					<ul class="sub-menu">
 						<li><a class="link_name">Cadastros</a></li>
 						<li><a href="/clientes/lista">Clientes</a></li>
-						<a>
-							Produtos
-							<i class='bx bxs-chevron-down'></i>
-						</a>
-						<ul class="sub-sub-menu"></ul>
-						<li><a href="/servicos">Fornecedores</a></li>
+						<li><a href="/produtos/lista">Produtos</a></li>
+						<li><a href="/fornecedores/lista">Fornecedores</a></li>
 					</ul>
 				</li>
 				<li>
@@ -134,15 +130,6 @@
 					$('.alert-dismissible').alert('close');
 				}, 5000);
 			});
-			//Verificar CPF ou CNPJ
-			var options = {
-				onKeyPress: function (cpf, ev, el, op) {
-					var masks = ['000.000.000-000', '00.000.000/0000-00'];
-					$('.cpfOuCnpj').mask((cpf.length > 14) ? masks[1] : masks[0], op);
-				}
-			}
-
-			$('.cpfOuCnpj').length > 11 ? $('.cpfOuCnpj').mask('00.000.000/0000-00', options) : $('.cpfOuCnpj').mask('000.000.000-00#', options);
 		</script>
 	</body>
 
