--- a/src/main/resources/templates/paginas/cadastros/produtos/produtos.html
+++ b/src/main/resources/templates/paginas/cadastros/produtos/produtos.html
@@ -54,7 +54,7 @@
 							<td th:text="${d.preco}"></td>
 							<td colspan="2">
 								<a class="btn btn-sm" th:href="@{/produtos/editar/{id} (id=${d.id})}" role="button">
-									<span class="oi oi-eye visualizar" title="Editar" aria-hidden="true"></span>
+									<span class="oi oi-pencil visualizar" title="Editar" aria-hidden="true"></span>
 								</a>
 								<button th:id="${ 'btn_produtos/excluir/'+ d.id }" type="button" class="btn btn-sm"
 									data-toggle="modal" data-target="#meumodelo">
